# riscv-emulator-challenge

./: Cargo.toml  README.md  rust-toolchain.toml
benchmark/: Cargo.toml
benchmark/src/: main.rs
crates/curves/: Cargo.toml
crates/curves/src/: lib.rs  params.rs
crates/executor/: Cargo.toml  build.rs
crates/executor/src/: context.rs  executor.rs  hook.rs  io.rs  lib.rs  program.rs  state.rs  utils.rs  utils_simd.rs
crates/executor/src/disassembler/: elf.rs  rrs.rs
crates/executor/src/events/: memory.rs  mod.rs  utils.rs
crates/executor/src/events/precompiles/: mod.rs
crates/executor/src/syscalls/: commit.rs  context.rs  deferred.rs  hint.rs  mod.rs  unconstrained.rs  verify.rs  write.rs
crates/executor/src/syscalls/precompiles/: mod.rs  uint256.rs
crates/executor/src/syscalls/precompiles/edwards/: add.rs  decompress.rs
crates/executor/src/syscalls/precompiles/fptower/: fp.rs  fp2_addsub.rs  fp2_mul.rs
crates/executor/src/syscalls/precompiles/keccak256/: permute.rs
crates/executor/src/syscalls/precompiles/sha256/: compress.rs  extend.rs
crates/executor/src/syscalls/precompiles/weierstrass/: add.rs  decompress.rs  double.rs
