[package]
name = "riscv-emulator-challenge"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
alloy-primitives = "0.8.5"
sp1-core-executor = { workspace = true }